(feat) make JVM respect CPU and RAM limits in Linux docker container